test/implicitDup19_3.slq

def main(){
	x:=H(0);
	y:=dup(x);
	z:=y;
	if true{
		k:=y; /// error
		H(0):=x;
	}else{
		k:=y; /// error
		H(0):=x;
	}
	return (z,k);
}
